# 42-scop

./: .gitignore  Cargo.toml  Makefile  README.md  find_glslc.sh
resources/: texture_cube.mtl
shaders/: shader.frag  shader.vert
src/: buffers.rs  depth.rs  descriptor.rs  device.rs  main.rs  model.rs  obj.rs  pipeline.rs  swapchain.rs  textures.rs  vertex.rs
src/math/: angle.rs  matrix.rs  mod.rs  projection.rs  vector.rs
src/tga/: color_map.rs  error.rs  footer.rs  header.rs  mod.rs  pixels.rs  point.rs  size.rs  tests.rs  tga.rs
