[package]
name = "scop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"
cgmath = "0.18"
vulkanalia = { version = "0.22.0", features = ["libloading", "provisional", "window"] }
winit = "0.28"
