[package]
name = "scop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
nom = "7.1.3"
png = "0.17.13"
pretty_env_logger = "0.5"
thiserror = "1"
vulkanalia = { version = "0.23.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"
